--- a/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
+++ b/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
@@ -23,6 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Wavelet_Tree_From_RRR</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Main</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
