--- a/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
+++ b/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
@@ -156,7 +156,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Wavelet_Tree_From_RRR.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
