Added RRR, calculating blocks and superblocks

--- a/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj.filters
+++ b/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rrr.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rrr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rrr_table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
