--- a/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
+++ b/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
@@ -146,10 +146,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="rrr.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rrr.cpp" />
+    <ClCompile Include="rrr_table.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
