Nina - added wavelet tree

--- a/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
+++ b/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR/Wavelet_Tree_From_RRR.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="rrr_table.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="wavelet_tree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rrr.cpp" />
